[project]
name = "resilient-regression-testing"
version = "0.1.0"
description = "YAML-driven dry-run regression runner for IBM SOAR / Resilient scenarios"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "resilient-circuits>=51.0",
]

[project.scripts]
resilient-regression = "resilient_regression.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resilient_regression"]
